--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react-dom": "^16.6.3"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "standard": "^12.0.1"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
